[package]
name = "cargo-cpy-run"
version = "0.1.0"
authors = ["Ales Musil <amusil@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytesize = "1.0"
clap = "2.33"

[profile.release]
codegen-units = 1
debug = true
lto = true
